--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,5 @@
 HA (GitHub).code-workspace
 .vscode/
-fitbit.conf
-octopusagile.json
 secrets.yaml
 '*.db'
 '*.log'
@@ -15,7 +13,6 @@ home-assistant.log*
 home-assistant_v2.db
 home-assistant_v2.db-shm
 home-assistant_v2.db-wal
-.HA_VERSION
 ssl/
 .cloud
 startup/
@@ -37,24 +34,21 @@ www/tmp/
 .storage/person
 .storage/zone
 .storage/gym
-google_calendars.yaml
-.google.token
 .storage/camera
+.storage/.edgeos
+.storage/trace.saved_traces
+.storage/unifi_data
+google_calendars.yaml
 o365_calendars.yaml
 .O365-token-cache/
+*.token
+*.pem
 zigbee.db
 zigbee2mqtt/log
 image
 rtsp2webrtc_v4_aarch64
-*.pem
-.google_fit.token
-.storage/.edgeos
-.Seb_google_fit.token
 zigbee2mqtt/
-.storage/zwave_js.legacy_zwave_migration
-.shopping_list.json
-.storage/trace.saved_traces
-.storage/unifi_data
 .ms_todo_auth.json
-.storage/unifi_data
 double-take/
+www/community/
+custom_components/
