--- a/.gitignore
+++ b/.gitignore
@@ -1,75 +1,65 @@
-HA (GitHub).code-workspace
-.vscode/
-secrets.yaml
+*auth*
+*.crt
 '*.db'
+*.key
 '*.log'
-__pycache__
+*.pem
+*.pub
+*token*
 ._*
+.cloud
 .DS_Store
+.shopping_list.json
+.ssh/
+.storage/.edgeos
+.storage/alexa*
+.storage/androidtv_*
+.storage/application_credentials
+.storage/auth*
+.storage/ble_monitor/
+.storage/camera
+.storage/cloud*
+.storage/core*
+.storage/esphome*
+.storage/frontend.*
+.storage/google*
+.storage/hacs*
+.storage/hassio
+.storage/http*
+.storage/image
+.storage/onboarding
+.storage/person
+.storage/repairs*
+.storage/room_assistant/
+.storage/sonoff/sebburrell@outlook.com.json
+.storage/trace.saved_traces
+.storage/unifi_data
+.storage/unraid/
+.storage/zone
+.vscode/
+__pycache__
+configuration/System/stats.csv
+custom_components/
 deps/
-known_devices.yaml
-tts/
+double-take/
+frigate.yml
+google_calendars.yaml
+HA (GitHub).code-workspace
+hass-emulated-hue/
 home-assistant.log*
 home-assistant_v2.db
 home-assistant_v2.db-shm
 home-assistant_v2.db-wal
-ssl/
-.cloud
-startup/
-room_assistant/
-www/tmp/
-.storage/hacs/
-.storage/unraid/
-.storage/room_assistant/
-.storage/androidtv_*
-.storage/auth*
-.storage/core.*
-.storage/frontend.*
-.storage/hacs.*
-.storage/alexa_media.*
-.storage/hassio
-.storage/http
-.storage/image
-.storage/onboarding
-.storage/person
-.storage/zone
-.storage/gym
-.storage/camera
-.storage/.edgeos
-.storage/trace.saved_traces
-.storage/unifi_data
-./storage/application_credentials
-google_calendars.yaml
-o365_calendars.yaml
-.O365-token-cache/
-*.token
-*.pem
-*.pub
-*.key
-*.crt
-zigbee.db
-zigbee2mqtt/log
-image
-rtsp2webrtc_v4_aarch64
-zigbee2mqtt/
-.ms_todo_auth.json
-double-take/
-www/community/
-custom_components/
-.shopping_list.json
-hass-emulated-hue/
-frigate.yml
 image/
+known_devices.yaml
+o365_calendars.yaml
+room_assistant/
+rtsp2webrtc_v4_aarch64
 rtsp2webrtc_v5_aarch64
-.storage/cloud
-.storage/application_credentials
-.storage/esphome*
-.storage/google_assistant
-.storage/google.693e1388f047578051fd4b0d40e8a8b0
-.storage/http.auth
-.storage/ble_monitor/
-.storage/sonoff/sebburrell@outlook.com.json
-configuration/System/stats.csv
-.ssh/
-.storage/repairs*
-.storage/unifi_data
+secrets.yaml
+ssl/
+startup/
+tts/
+www/community/
+www/tmp/
+zigbee*
