--- a/configuration.yaml
+++ b/configuration.yaml
@@ -21,4 +21,5 @@ script: !include scripts.yaml
 frontend:
   extra_module_url:
     - /hacsfiles/lovelace-card-mod/card-mod.js
+    - /hacsfiles/thermal_comfort_icons/thermal_comfort_icons.js
   themes: !include_dir_merge_named themes
