--- a/scripts.yaml
+++ b/scripts.yaml
@@ -24,13 +24,19 @@ starrunner_wake:
   sequence:
   - service: wake_on_lan.send_magic_packet
     data:
-      mac: 00-D8-61-78-02-E0
+      mac: 00:D8:61:78:02:E0
+      broadcast_address: 192.168.1.80
+      broadcast_port: 9
   - service: wake_on_lan.send_magic_packet
     data:
-      mac: 00-D8-61-78-02-DF
+      mac: 00:D8:61:78:02:DF
+      broadcast_address: 192.168.1.89
+      broadcast_port: 9
   - service: wake_on_lan.send_magic_packet
     data:
-      mac: 38-00-25-AA-A6-95
+      mac: 38:00:25:AA:A6:95
+      broadcast_address: 192.168.1.38
+      broadcast_port: 9
   mode: single
   icon: mdi:power
 print_entities_to_file:
@@ -38,8 +44,13 @@ print_entities_to_file:
   sequence:
   - service: notify.entity_log
     data:
-      message: "{% for state in states %}\n  - {{- state.entity_id -}}\n{% endfor\
-        \ %}\n"
+      message: '{% for state in states %}
+
+        {{- state.entity_id -}},{{- state.state -}},
+
+        {% endfor %}
+
+        '
   mode: single
   icon: mdi:math-log
 endeavor_wake:
@@ -110,3 +121,24 @@ xmas_lights:
   mode: single
   alias: Xmas Lights
   icon: mdi:sledding
+new_script:
+  alias: rainbow light
+  mode: single
+  fields:
+    entity:
+      description: The entity that will be rainbowed
+      example: light.lounge
+  variables:
+    colors: "{{ [[0.217,0.077], [0.157,0.05], [0.136,0.04], [0.137,0.065],\n    [0.141,0.137],
+      [0.146,0.238], [0.151,0.343], [0.157,0.457],\n    [0.164,0.591], [0.17,0.703],
+      [0.172,0.747], [0.199,0.724],\n    [0.269,0.665], [0.36,0.588], [0.444,0.517],
+      [0.527,0.447],\n    [0.612,0.374], [0.677,0.319], [0.701,0.299], [0.667,0.284],\n
+      \   [0.581,0.245], [0.477,0.196], [0.385,0.155], [0.301,0.116], \n    [0.217,0.077]]
+      }}"
+  sequence:
+  - service: light.turn_on
+    data_template:
+      xy_color: '{{  colors[(now().second/2.5)|round(0)] }}
+
+        '
+      entity_id: '{{ entity }}'
